
	* output-scalar-file-append=

	* experiment-label   "${configname}"
	* measurement-label  "${iterationvars}"
	* replication-label  "#${repetition}, seedset=@"

	* output-vector-file now defaults to: "${configname}-${runnumber}.vec"
	* output-scalar-file now defaults to: "${configname}-${runnumber}.sca"

	* **.enable-recording=
	* **.record-event-numbers=
	* **.recording-interval=

	* indexed outputvector file manager

	* simtime-scale
	* ned-path, NEDPATH
	* fingerprint
	* seed-set
	* eventlog-file
	* eventlog-message-detail-pattern

	* args.cc/h rewritten ("--" can be used to mark end of options, etc...)

	* inifile entries are now checked against a database of recognized
	options, and unrecognized options (typo, etc) are reported as
	errors instead of failing silently

	* added "-h config", "-h classes", etc command-line option, which prints
	out available config file options, registered classes etc.

	* opp_run program added -- this is an empty simulation executable,
	which can be used to run simulation models that have been compiled
	into a shared library (dll or shared object).

	* out-of-directory build, and other Makefile changes

	* parsim: the behavior of the <pattern>.partition-id inifile entries changed

	TODO add the following info to the manual:

	With the new code, you'd normally set up partitioning like this:
	  - specify a concrete partition-id for compound modules which will be,
	    in whole, on one partition
	  - there's no need to specify anything for its submodules
	  - for compound modules that have parts on more than one partition, list
	    all those partitions in the partition-id string (e.g: 0,1,2); this is
	    necessary because if a compound module is marked as belonging to
	    some partition X, it will be created as "placeholder" on all other
	    partitions, and no attempt will be made to create submodules in it.
	  - "*" is a synonym for "all partitions"
