@@ -33,7 +33,7 @@
 	* **.enable-recording=
 	* **.record-event-numbers=
 	* **.recording-interval=
-
+	* **.record-scalar=
 	* indexed outputvector file manager
 
 	* simtime-scale
@@ -57,6 +57,15 @@
 	into a shared library (dll or shared object).
 
 	* out-of-directory build, and other Makefile changes
+
+	Scalar file format change: when a cStatistic is recorded as a scalar, the
+	values will be recorded with the following names: (before, the names
+	contained dot instead of colon):
+	  "<objectname>:samples"
+	  "<objectname>:mean"
+	  "<objectname>:stddev"
+	  "<objectname>:min"
+	  "<objectname>:max"
 
 	* parsim: the behavior of the <pattern>.partition-id inifile entries changed
 
